no refresh on submit

--- a/chat.html
+++ b/chat.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <ul id="messages"></ul>
-    <form name="form" action="#" onsubmit="return chatMessage();return false">
+    <form name="form" action="#" onsubmit="chatMessage();return false">
       <input id="message" autocomplete="off"/>
       <button>Send</button>
     </form>
